--- a/react-portfolio/src/components/Contact/styles.css
+++ b/react-portfolio/src/components/Contact/styles.css
@@ -21,7 +21,7 @@
   border: 1px solid #fff;
   border-radius: 25px;
   margin: 0 auto;
-  width: 600px;
+  max-width: 500px;
   box-shadow: 0px 0px 10px #14205f80;
 }
 
@@ -31,8 +31,8 @@
   color: var(--font-color);
 }
 
-.contact-container > p {
-  font-size: 1.1rem;
+.contact-container p {
+  font-family: Montserrat, sans-serif !important;
 }
 
 .icon-section {
@@ -48,13 +48,18 @@
   margin: 0 20px;
   width: 60px;
   height: 60px;
-  transition: background-color 0.5s ease-out;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
 }
 
 .icon-container:hover {
-  background-color: #00ff94 !important;
   border: none;
+
+  background: rgb(26, 255, 140);
+  background: linear-gradient(
+    90deg,
+    rgba(26, 255, 140, 1) 0%,
+    rgba(236, 255, 0, 1) 100%
+  );
 }
 
 .icon-container > svg {
@@ -62,7 +67,7 @@
   top: 9px;
   font-size: 40px;
   color: #00ff94;
-  transition: color 0.5s ease-out;
+  transition: all 0.25s ease-in-out !important;
 }
 
 .icon-container:hover.icon-container > svg {
@@ -81,7 +86,7 @@ textarea {
   border-radius: var(--border-radius);
   margin: 20px auto;
   padding: 10px;
-  width: 100%;
+  width: 80%;
   max-width: 500px;
   font-family: europa, sans-serif;
   color: var(--font-color);
@@ -112,23 +117,19 @@ textarea:focus {
   color: #00ff94;
   text-transform: uppercase;
   cursor: pointer;
-  transition: all 0.5s ease-in-out !important;
+  transition: all 0.25s ease-in-out !important;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
 }
 
 .submit-btn:hover {
   border: none;
-  /* background-color: #00ff94; */
   background: rgb(26, 255, 140);
   background: linear-gradient(
-    360deg,
+    90deg,
     rgba(26, 255, 140, 1) 0%,
     rgba(236, 255, 0, 1) 100%
   );
-  
   color: var(--white);
-  transition: background-color 0.5s ease-out, border-color 0.5s ease-out,
-    color 0.5s ease-out;
 }
 
 .submit-btn:focus {
