--- a/react-portfolio/src/components/SkillCard/styles.css
+++ b/react-portfolio/src/components/SkillCard/styles.css
@@ -2,8 +2,9 @@
   background-color: white;
   border: 1px solid #fff;
   border-radius: var(--border-radius);
-  margin: 0 auto;
+  margin: 0 auto 20px;
   width: 100%;
+  max-width: 400px;
   height: 100%;
   padding: 30px 0;
   box-shadow: 0px 0px 10px #14205f80;
@@ -30,17 +31,20 @@
   font-size: 2.5rem;
   color: white;
 }
+.skill-text-section {
+  height: 60%;
+}
 
 .skill-text-section-heading {
-  margin-bottom: 50px !important;
+  margin-bottom: 25px !important;
   font-family: var(--main-font) !important;
   font-style: italic;
-  /* text-decoration: 3px underline var(--action-color); */
   color: var(--font-color);
 }
 
 .skill-text-section-content {
   margin: 0 auto !important;
+  height: 100% !important;
   width: 80%;
   color: var(--font-color);
 }
@@ -53,4 +57,13 @@
 
 .skill-text-section-content > span {
   color: #1aff8dd6 !important;
+}
+
+.skill-list {
+  height: 80%;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around !important;
 }
