--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -1,7 +1,7 @@
 :root {
   --border-radius: 30px;
-  --vertical-padding: 15px;
-  
+  --vertical-padding: 60px;
+
   --white: #fff;
   --font-color: #333;
   --main-color: #fff;
@@ -10,7 +10,7 @@
   --action-color: #1aff8c;
   --action-color-light: #84ffa9;
 
-  --main-font: 'Permanent Marker', cursive !important; 
+  --main-font: "Permanent Marker", cursive !important;
   --skills-contact-height: fit-content;
 }
 
@@ -37,7 +37,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: "Fira Code", monospace;
+  font-family: Montserrat, sans-serif !important;
   font-weight: 100;
   word-spacing: 3px;
   line-height: 1.5;
