--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -37,11 +37,15 @@ html {
 body {
   margin: 0;
   padding: 0;
+  color: var(--dark-blue);
+}
+
+body,
+p {
   font-family: Montserrat, sans-serif !important;
   font-weight: 100;
   word-spacing: 3px;
   line-height: 1.5;
-  color: var(--dark-blue);
 }
 
 div {
