Added max-width, height and margin to icon section, also spaced items around.
Added position relative to icon container, border radius
and transition.

--- a/react-portfolio/src/components/Contact/styles.css
+++ b/react-portfolio/src/components/Contact/styles.css
@@ -22,6 +22,7 @@
   border-radius: 25px;
   margin: 0 auto;
   max-width: 500px;
+  height: 600px;
   box-shadow: 0px 0px 10px #14205f80;
 }
 
@@ -36,24 +37,26 @@
 }
 
 .icon-section {
+  max-width: 400px;
+  height: 100px;
+  margin: 0 auto;
   display: flex;
-  justify-content: center;
-  padding: 40px 0 30px;
+  justify-content: space-around;
 }
 
 .icon-container {
-  background-color: transparent;
+  position: relative;
+  top: 20px;
+  background: white;
   border: none;
-  border-radius: var(--border-radius);
-  margin: 0 20px;
+  border-radius: 50px;
   width: 60px;
   height: 60px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+  transition: all 0.25s ease-in-out !important;
 }
 
 .icon-container:hover {
-  border: none;
-
   background: rgb(26, 255, 140);
   background: linear-gradient(
     90deg,
@@ -64,10 +67,10 @@
 
 .icon-container > svg {
   position: relative;
-  top: 9px;
+  top: 10px;
   font-size: 40px;
-  color: #00ff94;
-  transition: all 0.25s ease-in-out !important;
+  color: #48ff05;
+  transition: all 0.1s !important;
 }
 
 .icon-container:hover.icon-container > svg {
@@ -113,8 +116,10 @@ textarea:focus {
   border-radius: var(--border-radius);
   margin-bottom: 30px;
   padding: 10px 20px;
+  font-family: var(--main-font) !important;
   font-size: 1.3rem;
-  color: #00ff94;
+
+  color: #48ff05 !important;
   text-transform: uppercase;
   cursor: pointer;
   transition: all 0.25s ease-in-out !important;
@@ -129,7 +134,8 @@ textarea:focus {
     rgba(26, 255, 140, 1) 0%,
     rgba(236, 255, 0, 1) 100%
   );
-  color: var(--white);
+  padding: 10px 40px;
+  color: var(--font-color) !important;
 }
 
 .submit-btn:focus {
