--- a/react-portfolio/src/components/SingleProject/styles.css
+++ b/react-portfolio/src/components/SingleProject/styles.css
@@ -1,16 +1,22 @@
+.single-project-container {
+  padding: 200px 0;
+}
+
 .project-title {
+  margin-bottom: 100px !important;
   font-family: var(--main-font) !important;
   font-style: italic;
 }
 
-.single-project-container {
+.content {
   display: flex;
-  height: 200px;
-  padding: 200px 0;
 }
 
 .left-side {
-  width: 60%;
+  width: 70%;
+}
+
+.image-container {
 }
 
 .project-image {
@@ -19,7 +25,7 @@
 }
 
 .right-side {
-  width: 40%;
+  width: 30%;
   padding-left: 100px;
 }
 
