--- a/react-portfolio/src/components/Navbar/styles.css
+++ b/react-portfolio/src/components/Navbar/styles.css
@@ -47,7 +47,7 @@
   height: 40px;
   font-size: 20px !important;
   font-weight: bold !important;
-  font-family: var(--main-font) !important;
+  font-family: Montserrat, sans-serif !important;
   color: var(--font-color) !important;
   transition: all 0.25s ease-in-out !important;
 }
