--- a/react-portfolio/src/components/SkillCard/styles.css
+++ b/react-portfolio/src/components/SkillCard/styles.css
@@ -1,12 +1,12 @@
 .skill-card {
-  background-color: white;
+  background-color: var(--white);
   border: 1px solid #fff;
   border-radius: var(--border-radius);
-  margin: 0 auto 20px;
+  margin: 0 auto var(--spacing-xs);
   width: 100%;
   max-width: 400px;
   height: 100%;
-  padding: 30px 0;
+  padding: var(--spacing-md) 0;
   box-shadow: 0px 0px 10px #14205f80;
 }
 
@@ -21,22 +21,22 @@
   border-radius: 50px;
   width: 70px;
   height: 70px;
-  margin: 10px auto;
+  margin: var(--spacing-sm) auto;
 }
 
 .skill-icon-container > svg {
   position: relative;
   top: 22%;
   left: 22%;
-  font-size: 2.5rem;
-  color: white;
+  font-size: 40px;
+  color: var(--white);
 }
 .skill-text-section {
   height: 60%;
 }
 
 .skill-text-section-heading {
-  margin-bottom: 25px !important;
+  margin-bottom: var(--spacing-md) !important;
   font-family: var(--main-font) !important;
   font-style: italic;
   color: var(--font-color);
@@ -50,7 +50,7 @@
 }
 
 .skill-text-section-content {
-  font-family: Montserrat, sans-serif !important;
+  font-family: var(--secondary-font) !important;
   font-style: italic;
   color: var(--font-color);
 }
