--- a/react-portfolio/src/components/Contact/styles.css
+++ b/react-portfolio/src/components/Contact/styles.css
@@ -33,7 +33,7 @@
 }
 
 .contact-container p {
-  font-family: var(--secondary-font) !important;;
+  font-family: var(--secondary-font) !important;
 }
 
 .icon-section {
