--- a/react-portfolio/src/components/SkillCard/styles.css
+++ b/react-portfolio/src/components/SkillCard/styles.css
@@ -25,9 +25,7 @@
 }
 
 .skill-icon-container > svg {
-  position: relative;
-  top: 22%;
-  left: 22%;
+  margin: 15px;
   font-size: 40px;
   color: var(--white);
 }
