--- a/src/App.css
+++ b/src/App.css
@@ -80,19 +80,11 @@ li {
 }
 
 .skills-heading,
+.certifications-heading,
 .projects-heading,
 .contact-heading {
-  visibility: hidden;
-  display: none;
-  position: relative;
-  top: -45px;
-  background-color: var(--white);
-  border-radius: 50px;
-  border: 1px solid #121b6e2e;
-  font-style: normal !important;
-  font-weight: 600 !important;
-  color: rgb(84, 84, 84) !important;
-  box-shadow: 0px 0px 2px #002aff79;
+  font-family: var(--main-font) !important;
+  margin-bottom: var(--spacing-lg) !important;
 }
 
 .navbar-container,
