--- a/src/components/SingleProject/styles.css
+++ b/src/components/SingleProject/styles.css
@@ -1,5 +1,5 @@
 .single-project-container {
-  padding: var(--spacing-lg) 0;
+  padding: var(--spacing-lg);
 }
 
 .project-title {
@@ -11,16 +11,68 @@
 .content {
 }
 
-.image-container {
+.technologies-container {
+  display: flex;
+  justify-content: left;
+  width: 100%;
+  height: 40px;
+  margin-bottom: var(--spacing-sm);
+}
+
+.technologies-container > img {
+  margin-right: 10px;
+}
+
+.images-container {
+  display: flex;
 }
 
 .project-image {
   border-radius: 10px;
-  width: 100%;
+  margin-right: var(--spacing-md);
   margin-bottom: var(--spacing-lg) !important;
+}
+
+.desktop-image {
+  width: 75%;
+  height: 400px;
+}
+
+.mobile-image {
+  width: 20%;
+  height: 400px;
 }
 
 .project-description {
   line-height: 2 !important;
   margin-bottom: var(--spacing-md) !important;
+}
+
+.app-section-available {
+  display: flex;
+}
+
+td > p {
+  /* border: 1px solid black; */
+  width: 150px;
+  padding: 5px !important;
+  font-style: italic;
+}
+
+.checkbox-icon {
+  /* border: 1px solid black; */
+  padding: 5px;
+  color: #2ad97d;
+}
+
+.not-present-icon {
+  padding: 5px;
+  color: #d92a2a;
+}
+
+table,
+td {
+  border-collapse: collapse;
+  border-spacing: 0;
+  border: 1px solid var(--font-color);
 }
