--- a/src/components/CertificationCard/styles.css
+++ b/src/components/CertificationCard/styles.css
@@ -11,6 +11,7 @@
   background-color: white;
   border-radius: 35px;
 
+  width: 200px;
   padding: var(--spacing-md) 0;
 
   filter: drop-shadow(-6px 4px 8px rgba(255, 230, 0, 0.75))
@@ -41,15 +42,17 @@
 .name-container,
 .issue-date-container {
   padding: 0 10px;
-  height: 70px;
+  height: 80px;
 }
 
 .name-container {
+  padding-top: 15px;
   font-size: 18px;
   font-weight: bold;
 }
 
 .issue-date-container {
+  padding-top: 50px;
   font-style: italic;
-  font-size: 14px;
+  font-size: 12px;
 }
