--- a/src/components/Contact/styles.css
+++ b/src/components/Contact/styles.css
@@ -21,8 +21,9 @@
   border: 1px solid #fff;
   border-radius: 25px;
   margin: 0 auto;
+  padding-top: 20px;
   max-width: 500px;
-  height: 600px;
+  min-height: 250px;
   box-shadow: 0px 0px 10px #14205f80;
 }
 
@@ -36,15 +37,20 @@
 
 .icon-section {
   max-width: 400px;
-  height: 100px;
+  height: 200px;
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
 }
 
+.icon-section > a {
+  height: fit-content;
+  padding: 50px 0;
+}
+
 .icon-container {
   position: relative;
-  top: 20px;
+  top: 40%;
   background: white;
   border: none;
   border-radius: 50px;
