--- a/src/components/Home/styles.css
+++ b/src/components/Home/styles.css
@@ -20,8 +20,10 @@
 }
 
 .home-text-name {
-  background: #00cf98;
-  background: linear-gradient(to right, #00cf98 0%, #ccff11 100%);
+    background: #00cf98;
+    background: linear-gradient(to right, #00cf98 0%, #ccff11 100%);
+  /* background: rgb(246,58,76);
+  background: linear-gradient(90deg, rgba(246,58,76,1) 15%, rgba(255,217,105,1) 50%, rgba(73,223,153,1) 85%); */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-bottom: var(--spacing-md) !important;
